# SPR20_Aufgabe3_vorgabe_2

./: CMakeLists.txt  Makefile  Readme.html  Readme.md  main.c  scheduler_vorgabe
lib/: FCFS.h  HRRN.h  LCFS.h  MLF.h  PRIOP.h  RR.h  SRTNP.h  colors.h  process.h  queue.h
src/: FCFS.c  HRRN.c  LCFS.c  MLF.c  PRIOP.c  RR.c  SRTNP.c  colors.c  queue.c
